# openapi3.yaml
@@ -7,6 +7,27 @@ info:
     name: MIT
     url: https://opensource.org/licenses/MIT
 paths:
+  /change/{changesetId}/interpret:
+    get:
+      operationId: getInterpretation
+      summary: interpret a changeset by changesetId
+      parameters:
+        - $ref: '#/components/parameters/changesetId'
+        - $ref: '#/components/parameters/remote'
+        - $ref: '#/components/parameters/action'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InterpretResult'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
   /change/interpret:
     post:
       operationId: interpretChange
@@ -57,6 +78,29 @@ paths:
               schema:
                 $ref: '#/components/schemas/error'
 components:
+  parameters:
+    changesetId:
+      in: path
+      name: changesetId
+      required: true
+      schema:
+        $ref: '#/components/schemas/osmId'
+    remote:
+      in: query
+      name: remote
+      required: true
+      schema:
+        $ref: '#/components/schemas/remote'
+    action:
+      in: query
+      name: action
+      required: false
+      schema:
+        type: array
+        minLength: 1
+        uniqueItems: true
+        items:
+          $ref: '#/components/schemas/interpretAction'
   schemas:
     error:
       type: object
@@ -80,6 +124,22 @@ components:
       example: 3fa85f64-5717-4562-b3fc-2c963f66afa6
       minLength: 1
       maxLength: 68
+    action:
+      type: string
+      enum:
+        - create
+        - modify
+        - delete
+    interpretAction:
+      type: string
+      enum:
+        - create
+        - delete
+    remote:
+      type: string
+      enum:
+        - api
+        - replication
     BaseOsmElement:
       type: object
       required:
@@ -166,11 +226,7 @@ components:
         externalId:
           $ref: '#/components/schemas/externalId'
         action:
-          type: string
-          enum:
-            - create
-            - modify
-            - delete
+          $ref: '#/components/schemas/action'
         change:
           $ref: '#/components/schemas/OsmChange'
         tempOsmId:
